
syntax = "proto3";
package protocol.src;

service User{
    rpc DeductMoney(DeductMoneyRequest) returns (DeductMoneyResponse){}
    rpc Recharge(RechargeRequest) returns (RechargeResponse){}
}

//扣钱请求（下注）
message DeductMoneyRequest{
    string hall_id = 1;
    int64 user_id = 2;
    double amount = 3;
    string desc = 4;
}

//扣钱响应
message DeductMoneyResponse{
    int32 result_code = 1;
    string desc = 2;
    Result restult = 3;
}

message Result{
    double amount = 1;
    string order_sn = 2;//充值流水号
}

//加钱请求（派彩）
message RechargeRequest{
    string hall_id = 1;
    int64 user_id = 2;
    double amount = 3;
}
//加钱响应
message RechargeResponse{
    int32 result_code = 1;
    string desc = 2;
    Result restult = 3;
}
